--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>People count:</h1>
-    <h3 class="count">0</h3>
+    <h3 class="count"></h3>
     <button class="add" onclick="increment()">+1</button>
     <script src="index.js"></script>
 </body>
